# challenge-4-advance/infrastructure/repository/postgres/book/structures.go
@@ -3,8 +3,6 @@ package book
 import (
 	domainBook "microservices/challenge-4-advance/domain/book"
 	"time"
-
-	"gorm.io/gorm"
 )
 
 // Book is a struct that contains the book model
@@ -15,7 +13,7 @@ type Book struct {
 	Description string    `json:"description" example:"book description"`
 	CreatedAt   time.Time `json:"created_at,omitempty" example:"2021-02-24 20:19:39" gorm:"autoCreateTime:mili"`
 	UpdatedAt   time.Time `json:"updated_at,omitempty" example:"2021-02-24 20:19:39" gorm:"autoUpdateTime:mili"`
-	DeletedAt   *gorm.DeletedAt
+	DeletedAt   time.Time `json:"deleted_at,omitempty" example:"2021-02-24 20:19:39"`
 }
 
 // TableName overrides the table name used by User to `users`
